--- a/modules/core/client/views/admin.abstract.html
+++ b/modules/core/client/views/admin.abstract.html
@@ -1,8 +1,3 @@
-<section>
-	<div class="view-content">
-		<section class="main-panel">
-			<ui-view id="main-content-section"></ui-view>
-		</section>
-		<div class="hidden" id="main-side-section"></div>
-	</div>
-</section>
+
+<ui-view class="main-panel" id="main-content-section"></ui-view>
+<div class="hidden" id="main-side-section"></div>
