--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -1,4 +1,4 @@
-<div id="menu-side" class="sidenav">
+<div class="sidenav" id="menu-side">
 
 	<!-- PUBLIC USERS (COMMON) -->
 	<div ng-show="!menu.authentication.user">
