--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -1,13 +1,10 @@
-<div class="edit-project-comment-period-view">
 
-	<div class="view-title-container">
+
+	<div class="view-title-container flex-row">
 		<h1><span ng-show="project.name">Edit Comment Period</h1>
-	</div>
-
-	<div class="hidden">
-		<div class="col-sm-12 text-right">
-			<a class="btn btn-xs btn-link" ui-sref="p.commentperiod.list">Cancel</a>
-			<a class="btn btn-xs btn-link" href ng-click="save()">Save</a>
+		<div class="actions">
+			<a class="btn btn-default btn-sm" ui-sref="p.commentperiod.list">Cancel</a>
+			<a class="btn btn-primary btn-sm" href ng-click="save()">Save</a>
 		</div>
 	</div>
 
@@ -29,20 +26,20 @@
 		<!-- DETAILS TAB CONTENT -->
 		<div class="tab-pane" ng-show="form.curTab === 'pcpDetails'">
 			<div class="row">
-				<div class="col-md-4 col-xl-3 form-group">
+				<div class="col-sm-6 col-lg-4 form-group">
 					<label class="control-label">Comment Period Type</label>
 					<select ng-change="changeType()" ng-model="period.periodType" class="form-control">
 						<option ng-selected="selected">Public</option>
 						<!-- <option>Working Group</option> -->
 					</select>
 				</div>
-				<div class="col-md-4 col-xl-3 form-group">
+				<div class="col-sm-6 col-lg-4 form-group">
 					<label class="control-label">Content for Review</label>
 					<select ng-model="period.artifact" class="form-control" ng-options="artifact as artifact.name for artifact in artifacts"></select>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-12 col-md-4 form-group">
+				<div class="col-md-6 col-lg-4 form-group">
 					<label class="control-label">Start / End Dates</label>
 					<div class="form-inline">
 						<div class="form-control date-picker" x-modal-date-picker x-selected-date="period.dateStarted">
@@ -141,14 +138,6 @@
 		</div>
 		<!-- / ROLES & PERMISSIONS TAB CONTENT -->
 
-		<div class="form-footer clearfix">
-			<div class="pull-right">
-				<a class="btn btn-default" ui-sref="p.commentperiod.list">Cancel</a>
-				<a class="btn btn-primary" href ng-click="save()">Save</a>
-			</div>
-		</div>
-
 	</div>
 
-</div>
 
