--- a/modules/recent-activity/client/views/recent-activity-list.html
+++ b/modules/recent-activity/client/views/recent-activity-list.html
@@ -1,11 +1,11 @@
-<div class="news-admin-view">
+
 
 	<div class="view-title-container">
 		<h1>News & Announcements</h1>
-<!-- 		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear> -->
+		<!-- <tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear> -->
 	</div>
 
-	<div class="view-body-container">
+	<div class="view-body-container news-admin-view">
 
 		<div class="button-bar clearfix">
 			<a class="btn btn-default btn-sm pull-left" ui-sref="admin.recentactivity.create()">
@@ -54,7 +54,6 @@
 		</section>
 
 	</div>
-</div>
 
 
 <!-- Link for Row Item Template -->
