--- a/modules/projects/client/views/projects-partials/projects-map.html
+++ b/modules/projects/client/views/projects-partials/projects-map.html
@@ -1,4 +1,4 @@
-<div class='panel panel-default'>
+<div style="height: 50rem;">
 
 	<ui-gmap-google-map id='projects-map'
 		center='projectList.map.center'
