--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -1,13 +1,12 @@
-<div class="col-sm-6 col-sm-offset-3 col-lg-4 col-lg-offset-4">
-  <div class="panel panel-default" x-center-vertical>
 
-
+<div class="panel panel-default">
+    
     <div class="panel-heading">
-      <h3 class="panel-title">Login</h3>
+      <h1 class="panel-title">Login</h2>
     </div>
 
-
     <div class="panel-body">
+      
       <div class="alert alert-danger animated fadeIn text-center" ng-show="loginPanel.error">{{loginPanel.error}}</div>
 
       <form name="userForm" ng-submit="loginPanel.signin(userForm.$valid)" class="signin" novalidate autocomplete="off">
@@ -28,7 +27,7 @@
           </div>
         </div>
         
-        <div class="form-group text-center">
+        <div class="form-group">
           <button type="submit" class="btn btn-default">Sign in</button>
         </div>
     
@@ -40,9 +39,8 @@
       </form>
 
     </div> <!-- /panel-body -->
-  </div> <!-- /panel -->
-</div>
 
+</div>
 
 
 
