--- a/modules/guidance/client/views/guidance-main.html
+++ b/modules/guidance/client/views/guidance-main.html
@@ -1,4 +1,4 @@
-<div class="guidance-main-view">
+<div class="main-panel guidance-main">
 
     <div class="view-title-container">
         <h1>Guidance</h1>
@@ -61,5 +61,6 @@
             </ul>
         </section><!-- / GUIDANCE -->
     </div>
-	
+
 </div>
+	
