--- a/modules/projects/client/views/projects-partials/projects-map.html
+++ b/modules/projects/client/views/projects-partials/projects-map.html
@@ -1,4 +1,4 @@
-<div style="height: 50rem;">
+<div class="map-container">
 
 	<ui-gmap-google-map id='projects-map'
 		center='projectList.map.center'
